-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
Qt Creator 3.2.0
-
Arch Linux x86_64
-
16844e1fbcdc8ddc4fb855fb5ac999ab8fdf0de5, 697f70cb33ddb36403d941dac1487491f6100d68
Committing changes using Subversion > Commit All Files no longer shows the output of the svn commit command. The output of the svn commit command is useful because it shows the committed SVN revision number.
| For Gerrit Dashboard: QTCREATORBUG-12929 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 98877,2 | Subversion: Show output on commit | 3.3 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |