Subversion: Add vcsTopic

This partially addresses QTCREATORBUG-12929 which is about svn commit no
longer showing output which does include the revision number

Change-Id: I149f1fea05a63cc80625ba5e02c10edbce471e1a
Reviewed-by: Orgad Shaneh <orgads@gmail.com>